[workspace]
members = [
	"core",
	"host_to_core_std",
	"core_to_map_std",
	"interpreter_js",
	"schemas"
]

[workspace.dependencies]
thiserror = { version = "1" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
serde_urlencoded = { version = "0.7" }
base64 = { version = "0.21" }
regex = { version = "1" }
url = { version = "2" }

tracing = { version = "0.1" }

schemars = "0.8.12"

[profile.release]
opt-level = "s"
lto = true
debug = false
strip = "debuginfo"
