[package]
name = "comlink"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

rowan = { version = "0.15" }

[dev-dependencies]
pretty_assertions = "1"
