[package]
name = "oneclient_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["asyncify"]
asyncify = []
core_mock = []

[dependencies]
anyhow = "1"
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sf_std = { path = "../host_to_core_std", package = "host_to_core_std" }
map_std = { path = "../core_to_map_std", package = "core_to_map_std" }
interpreter_js = { path = "../interpreter_js" }

base64 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
