[package]
name = "oneclient_core"
version = "0.1.0"
edition = "2021"

[features]
core_mock = []

[dependencies]
anyhow = "1"
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

sf_std = { path = "../host_to_core_std", package = "host_to_core_std", features = ["global_exchange"] }
map_std = { path = "../core_to_map_std", package = "core_to_map_std" }
interpreter_js = { path = "../interpreter_js" }
comlink = { path = "../comlink" }

sha2 = { workspace = true }
hex = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
