[package]
name = "core_to_map_std"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

slab = "0.4"

sf_std = { path = "../host_to_core_std", package = "host_to_core_std" }

[dev-dependencies]
sf_std = { path = "../host_to_core_std", package = "host_to_core_std", features = ["stub_ffi"] }
