[package]
name = "host_to_core_std"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# stub out ffi/imports, so that this module can be run without host environemnt
# this is intended to enable testing this and dependent modules which won't have host
# imports available during testing
stub_ffi = []

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
host_to_core_std = { path = ".", features = ["stub_ffi"] }
