[package]
name = "host_to_core_std"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["global_exchange"]
global_exchange = []

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
url = { workspace = true }

tracing = { workspace = true }

wasm_abi = { path = "../wasm_abi" }
